# orderflow_engine

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  MONETIZATION_STRATEGY.md  README.md  price_history.csv
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md
examples/: README.md  simple_trading.cpp
ffi/: CMakeLists.txt
ffi/include/: orderbook_c.h
ffi/src/: orderbook_c.cpp
ffi/test/: test_c_wrapper.c
include/orderbook/: Order.hpp  OrderType.hpp  Orderbook.hpp  PriceHistory.hpp  PriceLevel.hpp  SelfTradePrevent.hpp  Types.hpp
orderflow-api/: Cargo.toml  build.rs  config.toml
orderflow-api/src/: config.rs  main.rs  state.rs
orderflow-api/src/engine/: orderbook.rs
orderflow-api/src/ffi/: bindings.rs  mod.rs  safe_wrapper.rs  types.rs
orderflow-api/src/handlers/: health.rs  market.rs  mod.rs  orders.rs  websocket.rs
orderflow-api/src/middleware/: metrics.rs
orderflow-api/src/models/: error.rs  market.rs  mod.rs  order.rs  trade.rs
orderflow-api/src/services/: audit_service.rs  mod.rs  order_service.rs  rate_limiter.rs  risk_service.rs
scripts/: plot_prices.py
src/: OrderBook.cpp  benchmark.cpp  main.cpp  simulation.cpp
