[package]
name = "orderflow-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
dashmap = "6"
governor = "0.8"
toml = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cc = "1"
